--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
 
     <string-array name="sandwich_details">
         <item>{\"name\":{\"mainName\":\"Ham and cheese
-            sandwich\",\"alsoKnownAs\":[]},\"placeOfOrigin\":\"\",\"description\":\"A ham and cheese
+            sandwich\",\"alsoKnownAs\":[\"My kids favorite sandwich\"]},\"placeOfOrigin\":\"Unknown\",\"description\":\"A ham and cheese
             sandwich is a common type of sandwich. It is made by putting cheese and sliced ham
             between two slices of bread. The bread is sometimes buttered and/or toasted. Vegetables
             like lettuce, tomato, onion or pickle slices can also be included. Various kinds of
